Fixed formatting issue that was causing a weird gap at the bottom of all pages. Fixed formatting issues on significant projects page Removed video in personal projects video because it was not working. Will investigate later

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ div.container-fluid {
     color: black;
     font-family: 'Abel';
     background: #F2F2F2;
+    height: 100%;
 }
 
 #picture {
